# slopmud

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  LICENSE-0BSD  LICENSING.md  README.md
.github/workflows/: deploy-web-services.yml  enterprise-cicd.yml  enterprise-hello.yml
apps/bot_party/: Cargo.toml
apps/bot_party/src/: main.rs
apps/combat_refs/: Cargo.toml
apps/combat_refs/src/: main.rs
apps/internal_oidc/: Cargo.toml  users.example.json
apps/internal_oidc/src/: main.rs
apps/sbc_deciderd/: Cargo.toml
apps/sbc_deciderd/src/: main.rs
apps/sbc_enforcerd/: Cargo.toml
apps/sbc_enforcerd/src/: main.rs
apps/sbc_metricsd/: Cargo.toml
apps/sbc_metricsd/src/: main.rs
apps/sbc_raftd/: Cargo.toml
apps/sbc_raftd/src/: main.rs
apps/shard_01/: Cargo.toml  build.rs
apps/shard_01/src/: groups.rs  items.rs  main.rs  protoadventure.rs  raftlog.rs  rooms.rs  rooms_fb.rs
apps/slopmud_adminctl/: Cargo.toml
apps/slopmud_adminctl/src/: main.rs
apps/slopmud_web/: Cargo.toml
apps/slopmud_web/src/: compliance_portal.rs  main.rs
apps/static_web/: Cargo.toml
apps/static_web/src/: main.rs
apps/ws_gateway/: Cargo.toml
apps/ws_gateway/src/: main.rs  ws_fb.rs
crates/compliance/: Cargo.toml
crates/compliance/src/: lib.rs
crates/fanzylog/: Cargo.toml
crates/fanzylog/src/: lib.rs
crates/mudproto/: Cargo.toml
crates/mudproto/src/: chat.rs  lib.rs  session.rs  shard.rs
crates/sbc_core/: Cargo.toml
crates/sbc_core/src/: lib.rs
crates/slopio/: Cargo.toml
crates/slopio/src/: frame.rs  lib.rs  line.rs  telnet.rs
crates/slopmud/: Cargo.toml  rooms.fbs
crates/slopmud/src/: ban.rs  email.rs  eventlog.rs  hold.rs  main.rs  nearline.rs
docs/: adventure_iteration.md  adventures_todo.md  area_files.md  area_iteration.md  area_summary.md  areas_todo.md  engine_todo.md  environments.md  gaia_ports.md  ip-account-creation-rate-limits.txt  levels.md  local_dev.md  newbie_school_look_targets.md  overworld_cartesian_layout.md  overworld_map_graph.mermaid  party_and_bots.md  quest_state_graph.mermaid  quest_state_model.md  room_scale_plan.md  ws_api.md  zone_beats.md
docs/compliance/: regulations.md
docs/devteam/: README.md  org_chart.md  org_chart.mermaid
docs/devteam/aichief/: bio.md  doing.md  plan.md
docs/devteam/buildmoon/: bio.md  doing.md  plan.md
docs/devteam/complianceeagle/: bio.md  doing.md  plan.md
docs/devteam/contentcaptain/: bio.md  doing.md  plan.md
docs/devteam/docbot/: bio.md  doing.md  plan.md
docs/devteam/lorescribe/: bio.md  doing.md  plan.md
docs/devteam/opsdroid/: bio.md  doing.md  plan.md
docs/devteam/patchbot/: bio.md  doing.md  plan.md
docs/devteam/questforge/: bio.md  doing.md  plan.md
docs/devteam/raftmarshal/: bio.md  doing.md  plan.md
docs/devteam/releaseengine/: bio.md  doing.md  plan.md
docs/devteam/rustarchon/: bio.md  doing.md  plan.md
docs/devteam/sentrysre/: bio.md  doing.md  plan.md
docs/devteam/toolsmith/: bio.md  doing.md  plan.md
docs/devteam/towncrier/: bio.md  doing.md  plan.md
infra/terraform/slopmud/: README.md  bootstrap_state.sh  root.hcl
locks/: README.md
protoadventures/: README.md  _TEMPLATE.md  arena-sandbox.md  event-quarry-night-shift.md  event-rail-runaway-cargo-bot.md  hunt-rustwood-stump-stalker.md  q1-first-day-on-gaia.md  q10-anchor-the-wind.md  q11-stormglass-route.md  q12-bloom-contract.md  q13-heart-of-the-machine.md  q14-stabilize-the-boundary.md  q2-job-board-never-sleeps.md  q3-sewer-valves.md  q4-quarry-rights.md  q5-sunken-index.md  q6-hillfort-signal.md  q7-conveyor-war.md  q8-flow-treaty.md  q9-beacon-protocol.md  side-alley-fence.md  side-library-misfiled-wing.md  side-sewer-drone-rescue.md
protoadventures/party_runs/: README.md  _RUN_TEMPLATE.md
scripts/: agent_ports_smoke.sh  alloc_port_block.py  area_files_budgetfill.py  area_files_report.py  area_files_stubgen.py  area_files_themify.py  area_files_validate.py  area_lock.py  areas_validate.py  build_bookworm_release.sh  certbot_deploy_hook_slopmud.sh  combat_refs_smoke.sh  deploy_homepage.sh  deploy_internal_oidc.sh  deploy_sbc.sh  deploy_shard_01.sh  deploy_slopmud.sh  deploy_slopmud_web.sh  deploy_static_web.sh  deploy_web_target.sh  e2e_burn_local.py  e2e_groups_raft.py  e2e_local.py  e2e_party_run.py  e2e_web_prd_auth_methods_selenium.py  e2e_web_selenium.py  e2e_web_selenium_local.py  e2e_web_slopsso_register_local.py  e2e_web_slopsso_register_selenium_local.py  e2e_web_sso_rbac_selenium_local.py  google_oauth_ssm_put.sh  local_slopsso_demo.sh  mk_agent_env.sh  overworld_export.py  overworld_validate.py  party_runs_class_coverage.py  party_runs_status.sh  proto_coverage.py  protoadventure_lint.py  tls_cache_ssm.sh  (+3 more)
scripts/cicd/: bootstrap_runner.sh  build_assets.sh  build_bootstrap_bundle.sh  build_rebootstrap_bundle.sh  ci_scope_e2e.sh  deploy_slopmud_from_s3.sh  hot_deploy_slopmud.sh  publish_assets_to_s3.sh  restore_onebox_stack.sh  slopmud-shuttle-assets  smoke_telnet.py
web_homepage/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  auth.html  compliance.html  connect.html  devlog.html  devlog.js  index.html  play.html  play.js  protocol.html  script.js  styles.css
world/: README.md  overworld.yaml  overworld_pairs.tsv  overworld_summary.json
world/areas/: arena.yaml  crater_gardens.yaml  factory_district_outskirts.yaml  glass_wastes.yaml  hillfort_ruins.yaml  meadowline.yaml  newbie_school.yaml  old_road_checkpoint.yaml  quarry.yaml  rail_spur.yaml  rustwood.yaml  scrap_orchard.yaml  skybridge.yaml  sunken_library.yaml  the_core.yaml  the_reservoir.yaml  the_seam.yaml  the_underrail.yaml  town_gaia_gate.yaml  under_town_sewers.yaml
world/zones/: arena.yaml  crater_gardens.yaml  factory_district_outskirts.yaml  glass_wastes.yaml  hillfort_ruins.yaml  meadowline.yaml  newbie_school.yaml  old_road_checkpoint.yaml  quarry.yaml  rail_spur.yaml  rustwood.yaml  scrap_orchard.yaml  skybridge.yaml  sunken_library.yaml  the_core.yaml  the_reservoir.yaml  the_seam.yaml  the_underrail.yaml  town_gaia_gate.yaml  under_town_sewers.yaml
(+210 files in other folders)
