[workspace]
resolver = "2"
members = [
  "apps/internal_oidc",
  "apps/shard_01",
  "apps/static_web",
  "apps/sbc_raftd",
  "apps/sbc_enforcerd",
  "apps/sbc_metricsd",
  "apps/sbc_deciderd",
  "apps/ws_gateway",
  "apps/bot_party",
  "crates/compliance",
  "crates/fanzylog",
  "crates/mudproto",
  "crates/sbc_core",
  "crates/slopmud",
  "crates/slopio",
  "apps/slopmud_web",
]
