[package]
name = "bot_party"
version = "0.1.0"
edition = "2021"
license = "MIT OR 0BSD"

[dependencies]
anyhow = "1"
futures-util = "0.3"
mudproto = { path = "../../crates/mudproto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = "0.3"
