[package]
name = "combat_refs"
version = "0.1.0"
edition = "2024"
license = "MIT OR 0BSD"

[dependencies]
anyhow = "1.0.96"
futures-util = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }

