[package]
name = "internal_oidc"
version = "0.1.0"
edition = "2024"
license = "MIT OR 0BSD"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.7.9", features = ["json", "tokio", "http1"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
argon2 = "0.5.3"
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
getrandom = "0.2.15"
jsonwebtoken = "9.3.0"
password-hash = "0.5.0"
pkcs8 = { version = "0.10.2", features = ["pem"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
rustls = { version = "0.23", features = ["ring"] }
