[package]
name = "slopmud_web"
version = "0.1.0"
edition = "2024"
license = "MIT OR 0BSD"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.22.1"
futures-util = { version = "0.3.31", features = ["sink"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
slopio = { path = "../../crates/slopio" }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
