[package]
name = "slopmud_web"
version = "0.1.0"
edition = "2024"
license = "MIT OR 0BSD"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.7.9", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
compliance = { path = "../../crates/compliance" }
futures-util = { version = "0.3.31", features = ["sink"] }
getrandom = "0.2.15"
lettre = { version = "0.11.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
slopio = { path = "../../crates/slopio" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"

aws-config = "1.5.13"
aws-sdk-s3 = "1.74.0"
aws-sdk-sesv2 = "1.82.0"
