[package]
name = "slopmud"
version = "0.1.0"
edition = "2024"
license = "MIT OR 0BSD"

[dependencies]
anyhow = "1.0.96"
fanzylog = { path = "../fanzylog" }
bytes = "1.10.1"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
compliance = { path = "../compliance" }
getrandom = "0.2.15"
memchr = "2.7.4"
mudproto = { path = "../mudproto" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
slopio = { path = "../slopio" }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zeroize = "1.8.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
argon2 = "0.5.3"
password-hash = "0.5.0"
sbc_core = { path = "../sbc_core" }

aws-config = "1.5.13"
aws-sdk-s3 = "1.74.0"
